--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <script src="./src/lib/jstat.js"></script>
     <script src="./src/lib/duncan.js"></script>
     <script src="./src/lib/plotly-v1.58.5.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    
     <link rel="shortcut icon" href="./src/img/CropID.png" type="image/x-icon">
   </head>
 
