Mobile css & excel data

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    
+
     <link rel="shortcut icon" href="./src/img/CropID.png" type="image/x-icon">
   </head>
 
@@ -26,7 +26,9 @@
         <div class="wrap">
           <div class="top">
             <div class="logo">
-              <img src="./src/img/CropID.png" alt="">
+              <a href="#" aria-label="CropID">
+                <img src="./src/img/CropID.png" alt="CropID">
+              </a>
             </div>
             <div class="menu">
               <a class="icon home" onclick="setActiveIcon('home')" href="#"><img src="./src/img/menu-analysis.png" alt="Home"></a>
