--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 <input type="file" id="file-input" accept=".xls,.xlsx,.xlsm,.xlsb,.xlt,.xltx,.xltm,.csv">
               </label>
               <div class="text">
-                <span>Atau unduh contoh data <a href="#">di sini</a></span>  
+                <span>Atau unduh contoh data <a target="_blank" href="https://github.com/OzikPutraJarwo/CropID/raw/refs/heads/main/src/utils/excel-data.xlsx">di sini</a></span>  
               </div>
             </div>
           </div>
